# cpp-course

./: .gitignore  README.md
homework_2/: CMakeLists.txt
homework_2/include/: task_1.hpp  task_2.hpp
homework_2/tasks/: task_1.cpp  task_2.cpp
homework_3/: CMakeLists.txt  test.html
homework_3/lib/HtmlWriter/: CMakeLists.txt  html_writer.cpp  html_writer.hpp
homework_3/lib/ImageBrowser/: CMakeLists.txt  image_browser.cpp  image_browser.hpp
homework_3/web_app/: test.html
homework_5/: CMakeLists.txt  compile_commands.json  homework_5.h
homework_5/.cache/clangd/index/: serialize.cpp.43C93E01858DF6E9.idx
homework_5/include/: convert_dataset.hpp  serialize.hpp
homework_5/src/: convert_dataset.cpp  serialize.cpp
homework_6/: CMakeLists.txt  compile_commands.json
homework_6/include/: image.hpp
homework_6/io_tools/: CMakeLists.txt
homework_6/io_tools/igg_image/: io_tools.cpp
homework_6/src/: image.cpp
homework_7/: CMakeLists.txt  compile_commands.json
homework_7/include/: bow.hpp
homework_7/src/: bow.cpp
homework_8/: CMakeLists.txt  README.md  compile_commands.json
homework_8/include/: image.hpp
homework_8/io_strategies/: CMakeLists.txt  io_strategy.cpp  io_strategy.hpp
homework_8/io_tools/igg_image/: io_tools.hpp
homework_8/src/: image.cpp  task_1.cpp
homework_8/tests/: dummy_file.ppm  lenna_out.ppm
homework_9/: CMakeLists.txt  compile_commands.json
homework_9/include/: bow.hpp
homework_9/src/: bow.cpp
